--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-
+Job directory using flask-python with WTForms to handle the forms.
+SQLite database which I might need to change in order for it to be hosted.
+You are your choices.
